[tool.poetry]
name = "chladni"
version = "0.1.0"
description = ""
authors = ["JamieDouugh <jamie.davies@douugh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
opencv-python = "^4.7.0.72"
imageio = "^2.28.1"
scipy = "^1.10.1"
sympy = "^1.12"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
